# Agent-Lens

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentlens/: __init__.py  cli.py  context.py  events.py  serialization.py  storage.py  tracer.py  viewer.py
agentlens/integrations/: __init__.py  deepseek.py  langchain.py  openai_compatible.py
docs/: deepseek.md  generic-tracing.md  langchain.md  quickstart.md  roadmap-issues.md  web-viewer.md
examples/: deepseek_agent.py  generic_agent.py  langchain_agent.py  simple_agent.py
tests/: test_deepseek_integration.py  test_events.py  test_langchain_integration.py  test_openai_compatible_integration.py  test_storage.py  test_tracer.py  test_viewer.py
