[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0a0"
description = "The open source flight recorder for AI agents — 本地追踪、回放和调试工具"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "AgentLens Contributors" },
]
keywords = [
    "ai-agent",
    "tracing",
    "debugging",
    "observability",
    "llm",
    "deepseek",
    "openai",
    "agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Environment :: Console",
    "Environment :: Web Environment",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/YJxyzxyz/Agent-Lens"
Documentation = "https://github.com/YJxyzxyz/Agent-Lens/tree/main/docs"
Repository = "https://github.com/YJxyzxyz/Agent-Lens"
Issues = "https://github.com/YJxyzxyz/Agent-Lens/issues"
Changelog = "https://github.com/YJxyzxyz/Agent-Lens/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.8",
]
openai-compatible = ["openai>=1.0.0"]
deepseek = ["openai>=1.0.0"]
web = ["fastapi>=0.110.0", "uvicorn>=0.27.0"]
langchain = ["langchain-core>=0.2.0"]

[project.scripts]
agentlens = "agentlens.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agentlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"agentlens/cli.py" = ["B008"]
"agentlens/viewer.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentlens"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
